test_traceback.txt
--- DEBUG SETTINGS ---
BASE_DIR: C:\Users\Usuario\Documents\Developer\Projects\MangaAnimEden
STATICFILES_DIRS: [WindowsPath('C:/Users/Usuario/Documents/Developer/Projects/MangaAnimEden/static')]
Does static exist? True
Contents of static: [WindowsPath('C:/Users/Usuario/Documents/Developer/Projects/MangaAnimEden/static/css'), WindowsPath('C:/Users/Usuario/Documents/Developer/Projects/MangaAnimEden/static/img'), WindowsPath('C:/Users/Usuario/Documents/Developer/Projects/MangaAnimEden/static/js')]
----------------------
28 objects imported automatically (use -v 2 for details).

python : Traceback (most recent call last):
En l?nea: 1 Car?cter: 1
+ python manage.py shell -c "import traceback; 
from django.template.loa ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (Tra 
   ceback (most recent call last)::String) [],   
  RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
  File "C:\Users\Usuario\Documents\Developer\Proj
ects\MangaAnimEden\manage.py", line 22, in 
<module>
    main()
  File "C:\Users\Usuario\Documents\Developer\Proj
ects\MangaAnimEden\manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "C:\Users\Usuario\AppData\Local\Packages\P
ythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
\LocalCache\local-packages\Python311\site-package
s\django\core\management\__init__.py", line 442, 
in execute_from_command_line
    utility.execute()
  File "C:\Users\Usuario\AppData\Local\Packages\P
ythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
\LocalCache\local-packages\Python311\site-package
s\django\core\management\__init__.py", line 436, 
in execute
    self.fetch_command(subcommand).run_from_argv(
self.argv)
  File "C:\Users\Usuario\AppData\Local\Packages\P
ythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
\LocalCache\local-packages\Python311\site-package
s\django\core\management\base.py", line 420, in 
run_from_argv
    self.execute(*args, **cmd_options)
  File "C:\Users\Usuario\AppData\Local\Packages\P
ythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
\LocalCache\local-packages\Python311\site-package
s\django\core\management\base.py", line 464, in 
execute
    output = self.handle(*args, **options)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Usuario\AppData\Local\Packages\P
ythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
\LocalCache\local-packages\Python311\site-package
s\django\core\management\commands\shell.py", 
line 247, in handle
    exec(options["command"], {**globals(), 
**self.get_namespace(**options)})
  File "<string>", line 1
    import traceback; from 
django.template.loader import render_to_string; 
from django.contrib.auth import get_user_model; 
User=get_user_model(); admin=User.objects.filter(
is_superuser=True).first(); try: print(render_to_
string('administration/user_list.html', 
{'users': User.objects.all(), 'request': 
type('obj', (object,), {'user': admin})})); 
except Exception: print(traceback.format_exc())
                                                 
                                                 
                                                 
                                                 
    ^^^
SyntaxError: invalid syntax
